--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".TrendingMovieApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +14,7 @@
         android:theme="@style/Theme.TrendingMovieApp"
         tools:targetApi="31">
         <activity
-            android:name=".TrendingMovieActivity"
+            android:name=".trending_movie_listing.TrendingMovieActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TrendingMovieApp">
@@ -24,5 +25,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
