--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".movie_detail.MovieDetailActivity" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
